public/css/main.css
@media screen {
  /* --- Reset Styles --- */
  * {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  html, body {
    height: 100%;
    width: 100%;
  }

  /* --- Welcome Page Styles --- */
  body {
    background: #eee;
    color: #333;
    font-family: Sans-Serif;
    font-size: 100%;
    line-height: 1.125em;
  }

  .wrapper {
    background: #fff;
    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
    box-shadow: 0 0 10px rgba(0,0,0,.3);
    margin: 10% auto;
    max-width: 1000px;
    padding: 2.225%;
    width: 90%;
  }

  h1 {
    font-size: 2.25em;
    line-height: 3.375em;
  }

  h2 {
    border-bottom: 2px solid #ccc;
    font-size: 1.5em;
    line-height: 2.25em;
    margin-bottom: 1em;
  }

  h3 {
    font-size: 1.125em;
    line-height: 2.25em;
  }

  p {
    margin-bottom: 1.125em;
  }

  .main {
    overflow: hidden;
  }

  .content {
    float: left;
    width: 62.745098%;
  }

  .sidebar {
    background: #eee;
    border: 1px solid #ccc;
    float: right;
    padding: 1em 2%;
    width: 25.372549%;
  }

  .sidebar ul {
    font-size: .875em;
  }

  .branding {
    clear: both;
  }

  footer.branding {
    border-top: 2px solid #ccc;
    margin-top: 20px;
    padding-top: 20px;
  }

  fieldset {
    border: 1px solid #ccc;
    padding: 1em;
  }

  fieldset li {
    font-size: 1.25em;
    margin-bottom: 1em;
  }

  input {
    border: 1px solid #ccc;
    border-radius: 3px;
    font-size: 1.25em;
    padding: 2px 12px;
  }

  input::-webkit-input-placeholder {
    font-style: italic;
  }

  input:-moz-placeholder {
    font-style: italic;
  }

  button {
    font-size: 1.25em;
    padding: 5px 1em;
  }
}

@media screen and (max-width: 800px){
  .wrapper {
    width: 90%
  }

  .content, .sidebar {
    float: none;
    margin-bottom: 1em;
    width: 100%;
  }

  .sidebar {
    background: transparent;
    border: none;
  }

  fieldset {
    text-align: center;
  }
}

@media screen and (max-width: 480px){
  .wrapper {
    font-size: 16px;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    padding: 0;
    width: 100%;
  }

  fieldset li {
    font-size: 1em;
  }

  input, button {
    font-size: 1em;
  }

  .wrapper > * {
    margin: 0 1em;
  }

  .sidebar {
    text-align: center;
  }

  .sidebar li {
    margin-bottom: 1em;
  }
}

@media print {

}

